@@ -18,6 +18,7 @@
  
 TreeTank 4.18
 -------------
+ 9 SAXHandler now able to insert subtrees into an existing treetank.
  8 SAXGenerator now only accepting IReadTransaction. It will allways perform
    a descendant-or self step on the currently selected node.
  7 Include self option for ancestor and descendant axis.
